--- a/lsof/Cargo.toml
+++ b/lsof/Cargo.toml
@@ -4,5 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+chrono = "0.4.38"
 log = "0.4.22"
 thiserror = "1.0.63"
+tokio = { version = "1.39.2", features = ["full"] }
