--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,7 +89,7 @@ jobs:
           sudo apt-get update
 
           sudo apt-get install -y clang-${{ matrix.clang }} g++-${{ matrix.gcc
-          }}
+          }} libpcap-dev
       - name: Checkout repository
         uses: actions/checkout@v3
       - name: Setup grcov
