--- a/network/Cargo.toml
+++ b/network/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-env_logger = "0.11.5" # TODO remove
-log = "0.4.22"
 pcap = "2.0.0"
 pnet = "0.35.0"
 thiserror = "1.0.63"
+tokio = { version = "1.39.2", features = ["full"] }
+tracing = "0.1"
+tracing-subscriber = "0.3"
+log = "0.4.22"
