--- a/network/Cargo.toml
+++ b/network/Cargo.toml
@@ -13,3 +13,4 @@ tokio = { version = "1.39.2", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
 log = "0.4.22"
+nom = "8.0.0-alpha2"
