--- a/lsof/Cargo.toml
+++ b/lsof/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2021"
 [dependencies]
 chrono = "0.4.38"
 thiserror = "1.0.63"
-tokio = { version = "1.39.2", features = ["full"] } # todo verify features
+tokio = { version = "1.39.2", features = ["full"] }
