--- a/rstracer/Cargo.toml
+++ b/rstracer/Cargo.toml
@@ -9,9 +9,11 @@ config = "0.14.0"
 duckdb = { version = "1.0.0", features = ["bundled"] }
 lazy_static = "1.5.0"
 lsof = { path = "../lsof"}
+network = { path = "../network"}
 ps = { path = "../ps"}
 serde = { version = "1.0.208", features = ["derive"] }
 thiserror = "1.0.63"
 tokio = { version = "1.39.2", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = "0.3.18"
+uuid = {version = "1.10.0", features = ["v4"] }
