--- a/rstracer/Cargo.toml
+++ b/rstracer/Cargo.toml
@@ -10,6 +10,7 @@ duckdb = { version = "1.0.0", features = ["bundled"] }
 lazy_static = "1.5.0"
 lsof = { path = "../lsof"}
 network = { path = "../network"}
+pnet = "0.35.0"
 ps = { path = "../ps"}
 serde = { version = "1.0.208", features = ["derive"] }
 thiserror = "1.0.63"
