rstracer: add dimension modul with services

--- a/rstracer/Cargo.toml
+++ b/rstracer/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 chrono = "0.4"
 config = "0.14.0"
 duckdb = { version = "1.0.0", features = ["bundled"] }
+etc = { path = "../etc"}
 lazy_static = "1.5.0"
 lsof = { path = "../lsof"}
 network = { path = "../network"}
