--- a/network/Cargo.toml
+++ b/network/Cargo.toml
@@ -14,4 +14,9 @@ pnet = "0.35.0"
 thiserror = "1.0.63"
 tokio = { version = "1.39.2", features = ["full"] }
 tracing = "0.1"
+
+[[example]]
+name = "print_packet"
+
+[dev-dependencies]
 tracing-subscriber = "0.3"
