etc: add examples

--- a/etc/Cargo.toml
+++ b/etc/Cargo.toml
@@ -7,3 +7,9 @@ edition = "2021"
 regex = "1.11.0"
 tempfile = "3.13.0"
 thiserror = "1.0.63"
+
+[[example]]
+name = "read_hosts"
+
+[[example]]
+name = "read_services"
