--- a/etc/Cargo.toml
+++ b/etc/Cargo.toml
@@ -2,6 +2,8 @@
 name = "etc"
 version = "0.1.0"
 edition = "2021"
+categories = ["command-line-utilities"]
+description = "API for reading etc/ files (UNIX)"
 
 [dependencies]
 regex = "1.11.0"
