--- a/rstracer/Cargo.toml
+++ b/rstracer/Cargo.toml
@@ -20,4 +20,5 @@ thiserror = "2.0.0"
 tokio = { version = "1.39.2", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = "0.3.18"
+tracing-appender = "0.2.3"
 uuid = {version = "1.11.0", features = ["v4"] }
