--- a/ps/Cargo.toml
+++ b/ps/Cargo.toml
@@ -4,8 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-chrono = "0.4.38"
+chrono = "0.4.39"
 thiserror = "2.0.0"
+tokio = { version = "1.42.0", features = ["full"] }
 
 [[example]]
 name = "list_process"
