--- a/ps/Cargo.toml
+++ b/ps/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2021"
 [dependencies]
 chrono = "0.4.39"
 thiserror = "2.0.0"
-tokio = { version = "1.42.0", features = ["full"] }
 
 [[example]]
-name = "list_process"
+name = "show_processes"
