--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,8 @@ name: ci
   - pull_request
   - push
 jobs:
-  test-lib-linux:
-    name: Test library On Linux
+  test-lib-debian:
+    name: Test library On Debian
     runs-on: '${{ matrix.os }}'
     strategy:
       matrix:
@@ -21,158 +21,140 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-      - name: Install project prerequisites
-        run: |
-          sudo apt-get update
-          sudo apt-get install libpcap-dev
-      - name: Setup Rust
-        run: >
-          rustup toolchain add ${{ matrix.toolchain }} --component
-          llvm-tools-preview
-
-          rustup override set ${{ matrix.toolchain }}
-      - name: Configure cache
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
-          key: >-
-            test-${{ runner.os }}-cargo-${{ matrix.toolchain }}-${{
-            hashFiles('**/Cargo.lock') }}
+      - name: Build docker image
+        run: docker build -t rstracer-debian-image -f .docker/Dockerfile .
       - name: Test
-        run: cargo test --lib
-  test-coverage:
-    name: 'Test coverage (gcc-${{ matrix.gcc }}, clang-${{ matrix.clang }})'
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        include:
-          - gcc: 10
-            clang: 11
-          - gcc: 11
-            clang: 12
-          - gcc: 11
-            clang: 13
-    env:
-      CXX: 'clang++-${{ matrix.clang }}'
-      CLANG_CXX: 'clang++-${{ matrix.clang }}'
-      GCC_CXX: 'g++-${{ matrix.gcc }}'
-      GCOV: 'gcov-${{ matrix.gcc }}'
-    continue-on-error: true
-    steps:
-      - name: Prepare C toolchains
         run: >
-          # Add LLVM keys
-
-          curl -o- https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add
-          -
-
-
-          # Add extra APT repos
-
-          sudo add-apt-repository ppa:ubuntu-toolchain-r/test
-
-          sudo add-apt-repository 'deb http://apt.llvm.org/focal/
-          llvm-toolchain-focal-11 main'
-
-          sudo add-apt-repository 'deb http://apt.llvm.org/focal/
-          llvm-toolchain-focal-12 main'
-
-          sudo add-apt-repository 'deb http://apt.llvm.org/focal/
-          llvm-toolchain-focal-13 main'
-
-
-          # Install toolchains
-
-          sudo apt-get update
-
-          sudo apt-get install -y clang-${{ matrix.clang }} g++-${{ matrix.gcc
-          }}
-      - name: Install project prerequisites
-        run: |
-          sudo apt-get update
-          sudo apt-get install libpcap-dev
-      - name: Checkout repository
-        uses: actions/checkout@v3
-      - name: Setup grcov
-        run: cargo install grcov
-      - name: Setup Rust
-        run: |
-          rustup toolchain add nightly --component llvm-tools-preview
-          rustup override set nightly
-      - name: Configure cache
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
-          key: >-
-            test-${{ runner.os }}-cargo-gcc-${{ matrix.gcc }}-clang-${{
-            matrix.clang }}-${{ hashFiles('**/Cargo.lock') }}
-      - name: Build
-        env:
-          RUSTFLAGS: '-Cinstrument-coverage'
-        run: cargo build
-      - name: Test
-        env:
-          LLVM_PROFILE_FILE: grcov-%p-%m.profraw
-          RUSTFLAGS: '-Cinstrument-coverage'
-        run: cargo test
-      - name: Generate coverage
-        run: |
-          grcov $(find . -name "grcov-*.profraw" -print) \
-            --branch \
-            --ignore-not-existing \
-            --binary-path ./target/debug/ \
-            -s . \
-            -t lcov \
-            --ignore "/*" \
-            -o lcov.info
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v4.0.1
-        with:
-          token: '${{ secrets.CODECOV_TOKEN }}'
-  lint:
-    name: Lint
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-      - name: Setup Python
-        uses: actions/setup-python@v4
-      - name: Setup Rust
-        run: |
-          rustup update stable
-          rustup override set stable
-      - name: Install project prerequisites
-        run: |
-          sudo apt-get update
-          sudo apt-get install libpcap-dev
-      - name: Install pre-commit
-        run: pip install --no-cache-dir pre-commit
-      - name: Configure Rust cache
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
-          key: 'pre-commit-${{ runner.os }}-cargo-${{ hashFiles(''**/Cargo.lock'') }}'
-      - name: Configure pre-commit cache
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pre-commit
-          key: >-
-            pre-commit-${{ runner.os }}-pre-commit-${{
-            hashFiles('**/.pre-commit-config.yaml') }}
-      - name: Run pre-commit
-        run: pre-commit run --all-files
+          container_id=$(docker run --privileged -d --mount type=bind,source=$(pwd),target=/rstracer/.coverage rstracer-debian-image)
+          docker exec -it a5575d2ec7d86628cdcb827bf439a5bf49cc51c8f4b285e04175e6496e7f34b6 sh command.sh test
+#  test-coverage:
+#    name: 'Test coverage (gcc-${{ matrix.gcc }}, clang-${{ matrix.clang }})'
+#    runs-on: ubuntu-latest
+#    strategy:
+#      matrix:
+#        include:
+#          - gcc: 10
+#            clang: 11
+#          - gcc: 11
+#            clang: 12
+#          - gcc: 11
+#            clang: 13
+#    env:
+#      CXX: 'clang++-${{ matrix.clang }}'
+#      CLANG_CXX: 'clang++-${{ matrix.clang }}'
+#      GCC_CXX: 'g++-${{ matrix.gcc }}'
+#      GCOV: 'gcov-${{ matrix.gcc }}'
+#    continue-on-error: true
+#    steps:
+#      - name: Prepare C toolchains
+#        run: >
+#          # Add LLVM keys
+#
+#          curl -o- https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add
+#          -
+#
+#
+#          # Add extra APT repos
+#
+#          sudo add-apt-repository ppa:ubuntu-toolchain-r/test
+#
+#          sudo add-apt-repository 'deb http://apt.llvm.org/focal/
+#          llvm-toolchain-focal-11 main'
+#
+#          sudo add-apt-repository 'deb http://apt.llvm.org/focal/
+#          llvm-toolchain-focal-12 main'
+#
+#          sudo add-apt-repository 'deb http://apt.llvm.org/focal/
+#          llvm-toolchain-focal-13 main'
+#
+#
+#          # Install toolchains
+#
+#          sudo apt-get update
+#
+#          sudo apt-get install -y clang-${{ matrix.clang }} g++-${{ matrix.gcc
+#          }}
+#      - name: Install project prerequisites
+#        run: |
+#          sudo apt-get update
+#          sudo apt-get install libpcap-dev
+#      - name: Checkout repository
+#        uses: actions/checkout@v3
+#      - name: Setup grcov
+#        run: cargo install grcov
+#      - name: Setup Rust
+#        run: |
+#          rustup toolchain add nightly --component llvm-tools-preview
+#          rustup override set nightly
+#      - name: Configure cache
+#        uses: actions/cache@v3
+#        with:
+#          path: |
+#            ~/.cargo/bin/
+#            ~/.cargo/registry/index/
+#            ~/.cargo/registry/cache/
+#            ~/.cargo/git/db/
+#            target/
+#          key: >-
+#            test-${{ runner.os }}-cargo-gcc-${{ matrix.gcc }}-clang-${{
+#            matrix.clang }}-${{ hashFiles('**/Cargo.lock') }}
+#      - name: Build
+#        env:
+#          RUSTFLAGS: '-Cinstrument-coverage'
+#        run: cargo build
+#      - name: Test
+#        env:
+#          LLVM_PROFILE_FILE: grcov-%p-%m.profraw
+#          RUSTFLAGS: '-Cinstrument-coverage'
+#        run: cargo test
+#      - name: Generate coverage
+#        run: |
+#          grcov $(find . -name "grcov-*.profraw" -print) \
+#            --branch \
+#            --ignore-not-existing \
+#            --binary-path ./target/debug/ \
+#            -s . \
+#            -t lcov \
+#            --ignore "/*" \
+#            -o lcov.info
+#      - name: Upload coverage reports to Codecov
+#        uses: codecov/codecov-action@v4.0.1
+#        with:
+#          token: '${{ secrets.CODECOV_TOKEN }}'
+#  lint:
+#    name: Lint
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Checkout repository
+#        uses: actions/checkout@v3
+#      - name: Setup Python
+#        uses: actions/setup-python@v4
+#      - name: Setup Rust
+#        run: |
+#          rustup update stable
+#          rustup override set stable
+#      - name: Install project prerequisites
+#        run: |
+#          sudo apt-get update
+#          sudo apt-get install libpcap-dev
+#      - name: Install pre-commit
+#        run: pip install --no-cache-dir pre-commit
+#      - name: Configure Rust cache
+#        uses: actions/cache@v3
+#        with:
+#          path: |
+#            ~/.cargo/bin/
+#            ~/.cargo/registry/index/
+#            ~/.cargo/registry/cache/
+#            ~/.cargo/git/db/
+#            target/
+#          key: 'pre-commit-${{ runner.os }}-cargo-${{ hashFiles(''**/Cargo.lock'') }}'
+#      - name: Configure pre-commit cache
+#        uses: actions/cache@v3
+#        with:
+#          path: ~/.cache/pre-commit
+#          key: >-
+#            pre-commit-${{ runner.os }}-pre-commit-${{
+#            hashFiles('**/.pre-commit-config.yaml') }}
+#      - name: Run pre-commit
+#        run: pre-commit run --all-files
