--- a/rstracer/Cargo.toml
+++ b/rstracer/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "rstracer"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 [dependencies]
-chrono = "0.4"
-config = "0.14.1"
-duckdb = { version = "1.1.1", features = ["bundled"] }
+chrono = "=0.4.39"
+config = "0.15.9"
+duckdb = { version = "1.2.0", features = ["bundled"] }
 etc = { path = "../etc"}
 lazy_static = "1.5.0"
 lsof = { path = "../lsof"}
