fix: preparing C toolchain in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,30 +106,30 @@ jobs:
         run: >
           # Add LLVM keys
 
-          curl -o- https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add
-          -
+          #curl -o- https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add
+          #-
 
 
           # Add extra APT repos
 
-          sudo add-apt-repository ppa:ubuntu-toolchain-r/test
+          #sudo add-apt-repository ppa:ubuntu-toolchain-r/test
 
-          sudo add-apt-repository 'deb http://apt.llvm.org/focal/
-          llvm-toolchain-focal-11 main'
+          #sudo add-apt-repository 'deb http://apt.llvm.org/focal/
+          #llvm-toolchain-focal-11 main'
 
-          sudo add-apt-repository 'deb http://apt.llvm.org/focal/
-          llvm-toolchain-focal-12 main'
+          #sudo add-apt-repository 'deb http://apt.llvm.org/focal/
+          #llvm-toolchain-focal-12 main'
 
-          sudo add-apt-repository 'deb http://apt.llvm.org/focal/
-          llvm-toolchain-focal-13 main'
+          #sudo add-apt-repository 'deb http://apt.llvm.org/focal/
+          #llvm-toolchain-focal-13 main'
 
 
           # Install toolchains
 
-          sudo apt-get update
+          #sudo apt-get update
 
-          sudo apt-get install -y libffi7 clang-${{ matrix.clang }} g++-${{ matrix.gcc
-          }}
+          #sudo apt-get install -y clang-${{ matrix.clang }} g++-${{ matrix.gcc
+          #}}
       - name: Install project prerequisites
         run: |
           sudo apt-get update
