fix: preparing C toolchain in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,34 +102,34 @@ jobs:
       GCOV: 'gcov-${{ matrix.gcc }}'
     continue-on-error: true
     steps:
-      - name: Prepare C toolchains
-        run: >
-          # Add LLVM keys
-
-          #curl -o- https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add
-          #-
-
-
-          # Add extra APT repos
-
-          #sudo add-apt-repository ppa:ubuntu-toolchain-r/test
-
-          #sudo add-apt-repository 'deb http://apt.llvm.org/focal/
-          #llvm-toolchain-focal-11 main'
-
-          #sudo add-apt-repository 'deb http://apt.llvm.org/focal/
-          #llvm-toolchain-focal-12 main'
-
-          #sudo add-apt-repository 'deb http://apt.llvm.org/focal/
-          #llvm-toolchain-focal-13 main'
-
-
-          # Install toolchains
-
-          #sudo apt-get update
-
-          #sudo apt-get install -y clang-${{ matrix.clang }} g++-${{ matrix.gcc
-          #}}
+#      - name: Prepare C toolchains
+#        run: >
+#          # Add LLVM keys
+#
+#          curl -o- https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add
+#          -
+#
+#
+#          # Add extra APT repos
+#
+#          sudo add-apt-repository ppa:ubuntu-toolchain-r/test
+#
+#          sudo add-apt-repository 'deb http://apt.llvm.org/focal/
+#          llvm-toolchain-focal-11 main'
+#
+#          sudo add-apt-repository 'deb http://apt.llvm.org/focal/
+#          llvm-toolchain-focal-12 main'
+#
+#          sudo add-apt-repository 'deb http://apt.llvm.org/focal/
+#          llvm-toolchain-focal-13 main'
+#
+#
+#          # Install toolchains
+#
+#          sudo apt-get update
+#
+#          sudo apt-get install -y clang-${{ matrix.clang }} g++-${{ matrix.gcc
+#          }}
       - name: Install project prerequisites
         run: |
           sudo apt-get update
